--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
-
-/* Your CSS Code here. */
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+tr td{
+    border: 1px solid black;
+}
+thead th{
+    border: 1px solid black;
+}
